# DPHM

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: n3dmm_anc39_iden1344_expr200.yaml
configs/flame/: flame.yaml
scripts/diffusion/: nphm_utils.py  nphm_vis.py  sample_diff_1d_backward.py  train_diff_1d_backward.py
scripts/diffusion/configs/: diff_expre_dim64_mults4.yaml  diff_iden_dim64_mults4.yaml  diff_joint_dim128_mults4.yaml
scripts/postprocess/: create_video_from_img.py
scripts/preprocess/: 00_create_kinect_scan_with_normals.py  01_fit_flame_to_kinect_seq.py  instructions.md
scripts/preprocess/dataset_creation/: alignment.py  coordinate_transform.py  data_processing_helpers.py  flame_deformation.py
scripts/preprocess/mediapipe/: demo_seq.py  demo_seq.sh
scripts/preprocess/pipnet_helpers/: demo_seq.py  run_demo_seq.sh
scripts/tracker/: dphm_ncos.05_a.1_exprsmo1_rigsmo1_sds.5.yaml  tracker.py  utils.py
scripts/training/: launch.py
scripts/trainingdata_preparation/: compute_deformation_field.py  compute_fields_new.py
src/dphm_tum/: env_paths.template
src/dphm_tum/data/: face_dataset.py  manager.py
src/dphm_tum/flame/: flame_model.py  flame_model_female.py  lbs.py
src/dphm_tum/gta_models/: setup_training.py
src/dphm_tum/models/: canonical_space.py  deformations.py  denoising_diffusion_pytorch_1d.py  diff_operators.py  diffusion_tracking.py  iterative_root_finding.py  loss_functions.py  neural3dmm.py  reconstruction.py  training.py
src/dphm_tum/render_utils/: pyvista_renderer.py
src/dphm_tum/utils/: alignment.py  io.py  (+8 more)
(+19 files in other folders)
